--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <title>Formations CRUD</title>
 <head>
 
-<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+<link type="text/css" rel="stylesheet"
+	href="materialize/css/materialize.min.css" media="screen,projection" />
 <link href="application.css" rel="stylesheet">
 
 <script type="text/javascript" src="jquery-3.1.1.js"></script>
@@ -17,10 +19,10 @@
 
 
 <body>
-<div id="crudFlipContainer" class="flip-container">
+	<div id="crudFlipContainer" class="flip-container">
 		<div class="flipper">
 			<div class="front">
-				<table class="employee">
+				<table class="employees">
 					<thead>
 						<th>Name</th>
 						<th>Firstname</th>
@@ -36,19 +38,19 @@
 						<div class="row">
 							<div class="input-field col s12">
 								<input placeholder="" id="name" type="text" class="validate">
-								<label for="name">Name</label>
+								<label for="name">Nom</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
 								<input placeholder="" id="firstname" type="text" class="validate">
-								<label for="firstname">Firstname</label>
+								<label for="firstname">Prénom</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-field col s6">
 								<input placeholder="" id="agency" type="text" class="validate">
-								<label for="agency">Agency</label>
+								<label for="agency">Agence</label>
 							</div>
 						</div>
 						<div class="row">
